<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	android:padding="16dp">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/tiyReceiverAddress"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/receiver_address"
		android:textColorHint="@color/colorTextSecondary"
		app:layout_constraintTop_toTopOf="parent">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/etReceiverAddress"
			android:inputType="text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/AppTheme.LighterEditText"
			android:textColor="@color/colorTextPrimary"
			android:textSize="15sp"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/tiyAmount"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="14dp"
		android:hint="@string/amount"
		android:textColorHint="@color/colorTextSecondary"
		app:layout_constraintTop_toBottomOf="@id/tiyReceiverAddress">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/etAmount"
			android:inputType="numberDecimal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/AppTheme.LighterEditText"
			android:textColor="@color/colorTextPrimary"
			android:textSize="15sp"/>

	</android.support.design.widget.TextInputLayout>

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="14dp"
		android:paddingStart="5dp"
		android:paddingEnd="5dp"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@id/tiyAmount">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/gas_price"
			android:textSize="15sp"
			android:textStyle="bold"
			android:textColor="@color/colorTextPrimary"/>

		<TextView
			android:id="@+id/tvGasPrice"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="15sp"
			android:textColor="@color/colorTextSecondary"/>

	</LinearLayout>

	<SeekBar
		android:id="@+id/sbGasPrice"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="14dp"
		android:progressBackgroundTint="@color/colorAccent"
		android:thumb="@drawable/ic_seekbar_thumb"
		app:layout_constraintTop_toBottomOf="@id/linearLayout"/>

	<TextView
		android:id="@+id/textView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="14dp"
		android:text="@string/gas_price_desc"
		android:textSize="14sp"
		android:textColor="@color/colorTextPrimary"
		app:layout_constraintTop_toBottomOf="@id/sbGasPrice"/>

	<LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="14dp"
		android:paddingStart="5dp"
		android:paddingEnd="5dp"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@id/textView">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/gas_limit"
			android:textSize="15sp"
			android:textStyle="bold"
			android:textColor="@color/colorTextPrimary"/>

		<TextView
			android:id="@+id/tvGasLimit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="15sp"
			android:textColor="@color/colorTextSecondary"/>

	</LinearLayout>

	<SeekBar
		android:id="@+id/sbGasLimit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="14dp"
		android:progressBackgroundTint="@color/colorAccent"
		android:thumb="@drawable/ic_seekbar_thumb"
		app:layout_constraintTop_toBottomOf="@id/linearLayout2"/>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="14dp"
		android:text="@string/gas_limit_desc"
		android:textSize="14sp"
		android:textColor="@color/colorTextPrimary"
		app:layout_constraintTop_toBottomOf="@id/sbGasLimit"/>

	<LinearLayout
		android:id="@+id/linearLayout3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingStart="5dp"
		android:paddingEnd="5dp"
		android:layout_marginTop="14dp"
		app:layout_constraintTop_toBottomOf="@id/textView2">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/network_fee"
			android:textSize="15sp"
			android:textStyle="bold"
			android:textColor="@color/colorTextPrimary"/>

		<TextView
			android:id="@+id/tvNetworkFee"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="15sp"
			android:textColor="@color/colorTextSecondary"/>

	</LinearLayout>

	<Button
		android:id="@+id/btSend"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:textColor="@color/colorTextPrimary"
		android:textSize="15sp"
		android:textStyle="bold"
		android:text="@string/send"
		android:textAllCaps="false"
		android:background="@drawable/ic_button_background_transparent"
		app:layout_constraintTop_toBottomOf="@id/linearLayout3"/>

</android.support.constraint.ConstraintLayout>