<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp">

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:src="@drawable/ic_safebox"
		android:tint="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintVertical_bias="0.2"
		android:rotation="-20"/>

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:textSize="16sp"
		android:textColor="@color/colorTextPrimary"
		android:textStyle="bold"
		android:text="@string/get_started"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/imageView"/>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:textSize="14sp"
		android:textColor="@color/colorTextPrimary"
		android:textStyle="bold"
		android:text="@string/add_wallet_description"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/textView"/>

	<Button
		android:id="@+id/btCreateWallet"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:text="@string/create_new_wallet"
		android:textSize="15sp"
		android:textStyle="bold"
		android:textAllCaps="false"
		android:textColor="@color/colorTextPrimary"
		android:background="@drawable/ic_button_background_transparent"
		app:layout_constraintBottom_toTopOf="@id/btImportWallet"/>

	<Button
		android:id="@+id/btImportWallet"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/already_have_wallet"
		android:textSize="15sp"
		android:textStyle="bold"
		android:textAllCaps="false"
		android:textColor="@color/colorTextPrimary"
		android:background="@drawable/ic_button_background_dashed"
		app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>