<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="60dp"
	android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="12dp"
		android:text="@string/wallets"
		android:textSize="14sp"
		android:textColor="@color/colorTextPrimary"
		android:textStyle="bold" />

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/colorBorder"/>

	<LinearLayout
		android:id="@+id/lyWallets"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:padding="12dp"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true">

		<ImageView
			android:layout_width="32dp"
			android:layout_height="32dp"
			android:layout_marginStart="0dp"
			android:layout_marginEnd="12dp"
			android:src="@drawable/ic_ethereum"
			android:tint="@color/white" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="2dp"
				android:text="@string/current_wallet"
				android:textSize="14sp"
				android:textColor="@color/colorTextPrimary"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/tvCurrentWallet"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="2dp"
				android:textSize="14sp"
				android:textColor="@color/colorTextSecondary" />

		</LinearLayout>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="12dp"
		android:text="@string/other"
		android:textSize="14sp"
		android:textColor="@color/colorTextPrimary"
		android:textStyle="bold" />

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/colorBorder"/>

	<LinearLayout
		android:id="@+id/lyNetworks"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:padding="12dp"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true">

		<ImageView
			android:layout_width="32dp"
			android:layout_height="32dp"
			android:layout_marginStart="0dp"
			android:layout_marginEnd="12dp"
			android:src="@drawable/ic_public_white_24dp"
			android:tint="@color/white" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="2dp"
				android:text="@string/ethereum_network"
				android:textSize="14sp"
				android:textColor="@color/colorTextPrimary"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/tvDefaultNetwork"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="2dp"
				android:textSize="14sp"
				android:textColor="@color/colorTextSecondary" />

		</LinearLayout>

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/colorBorder"/>

	<LinearLayout
		android:id="@+id/lyPrivacyPolicy"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:padding="12dp"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/privacy_policy"
			android:textSize="14sp"
			android:textColor="@color/colorTextPrimary"
			android:textStyle="bold" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_chevron_right_white_24dp"/>

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/colorBorder"/>

	<LinearLayout
		android:id="@+id/lySourceCode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:padding="12dp"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/source_code"
			android:textSize="14sp"
			android:textColor="@color/colorTextPrimary"
			android:textStyle="bold" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_chevron_right_white_24dp"/>

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/colorBorder"/>

	<LinearLayout
		android:id="@+id/lyReportBug"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:padding="12dp"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/report_bug"
			android:textSize="14sp"
			android:textColor="@color/colorTextPrimary"
			android:textStyle="bold" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_chevron_right_white_24dp"/>

	</LinearLayout>

</LinearLayout>